kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudy-demo-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cloudy-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudy-demo
            port:
              number: 8080
